#==============================================================================
# SS22 Project Test Task: library tools
#==============================================================================

add_subdirectory(commandLineParser)
add_subdirectory(core)
add_subdirectory(io)
add_subdirectory(utils)
