#==============================================================================
# SS22 Project Test Task: utils
#==============================================================================

add_library(utils SHARED "")

#------------------------------------------------------------------------------
# Configure target
#------------------------------------------------------------------------------
target_sources(utils
  PUBLIC
    utils.h
  PRIVATE
    utils.cpp
  )

set_property(TARGET utils PROPERTY
  OUTPUT_NAME "Utils"
  )

#------------------------------------------------------------------------------
# Install rules
#------------------------------------------------------------------------------
install(TARGETS utils ${DEFAULT_TARGET_INSTALL_DESTINATIONS})
